syntax = "proto3";
package ClassIsland.Shared.IPC.Protobuf.Client;
option csharp_namespace = "ClassIsland.Shared.IPC.Protobuf.Client";

import "Protobuf/Enum/CommandTypes.proto";

message ClientCommandDeliverScReq {
  Enum.CommandTypes Type = 2;
  bytes Payload = 3;
}
