syntax = "proto3";
package ClassIsland.Shared.IPC.Protobuf.Client;
option csharp_namespace = "ClassIsland.Shared.IPC.Protobuf.Client";

message ClientRegisterCsReq {
    string clientUid = 1;
    string clientId = 2;
}
