syntax = "proto3";
package ClassIsland.Shared.IPC.Protobuf.Command;
option csharp_namespace = "ClassIsland.Shared.IPC.Protobuf.Command";

message HeartBeat {
    bool isOnline = 1;
}
