syntax = "proto3";
package ClassIsland.Shared.IPC.Protobuf.Service;
option csharp_namespace = "ClassIsland.Shared.IPC.Protobuf.Service";

import "Protobuf/Server/ClientCommandDeliverScRsp.proto";
import "Protobuf/Client/ClientCommandDeliverScReq.proto";

service ClientCommandDeliver {
  rpc ListenCommand (stream Client.ClientCommandDeliverScReq) returns (stream Server.ClientCommandDeliverScRsp);
}